--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "better-auth": "1.3.27",
     "bullmq": "^5.56.5",
     "dotenv": "16.5.0",
+    "ioredis": "^5.4.2",
     "drizzle-orm": "0.43.1",
     "fastify": "5.3.3",
     "fastify-better-auth": "1.1.0",
